--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
 <h1> Comedians </h1>
+<h3> Average Comedian Age: <%= @comedians.average(:age).floor %> </h3>
 <ul>
 <% @comedians.each do |comedian| %>
   <p>Name: <%= comedian.name %></p>
