--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,10 +3,11 @@
 <ul>
 <% @comedians.each do |comedian| %>
   <p>Name: <%= comedian.name %></p>
-  <li>Age: <%= comedian.age %> </li>
+  <li>Age: <%= comedian.age %></li>
   <% special = comedian.specials.where(comedian_id: comedian.id) %>
     <% special.each do |s| %>
       <li>Special: <%= s.name %></li>
       <% end %>
+  <li>Special(s) Total: <%= special.count %></li>
 <%end%>
 <ul>
